tests/baselines/reference/throwType_property_access.errors.txt
tests/cases/compiler/throwType_property_access.ts(4,1): error TS2797: Type instantiated results in a throw type saying: 
    


==== tests/cases/compiler/throwType_property_access.ts (1 errors) ====
    class X<T> {
        i: T extends number ? throw '' : string = {} as any
    }
    new X<0>().i
    ~~~~~~~~~~~~
!!! error TS2797: Type instantiated results in a throw type saying: 
!!! error TS2797:     